[project]
name = "dpm-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-play-scraper>=1.2.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.5",
]
